--- a/about-cv.html
+++ b/about-cv.html
@@ -103,6 +103,7 @@
               <p class="sub"><a href="whats_happening_in_the_mastbos.html">Design collaboration</a> with <a href="https://www.staatsbosbeheer.nl/" target="_blank">Staatsbosbeheer</a></p>
               <p class="sub"><a href="down-manual.html">Design collaboration</a> with <a href="http://www.bredaphoto.nl/" target="_blank">BredaPhoto Festival</a> 2018</p>
               <p class="sub"><a href="down-manual.html">Design collaboration</a> with artist <a href="https://www.shengwenlo.com/down" target="_blank">Sheng-Wen Lo</a></p>
+              <p class="sub"><a href="artist-profile.html">Design collaboration</a> with artist <a href="http://www.corineaalvanger.com/" target="_blank">Corine Aalvanger</a></p>
               <p class="sub">Other design tasks</p>
             </li>
             <li>
