--- a/about-cv.html
+++ b/about-cv.html
@@ -112,7 +112,7 @@
         </div>
 
         <h2 class="intro">Born in 1990, Taoyuan, Taiwan, Yi-Hsien Hung is a motion/graphic designer, illustrator.</h2>
-        <p class="quote">Yi-Hsien is experienced with illustration, watercolour painting, motion graphics, visual identity, packaging design, editorial design and typography.</p>
+        <p class="quote">Yi-Hsien is experienced in illustration, watercolour painting, motion graphics, visual identity, packaging design, editorial design and typography.</p>
         <div class="cv">
           <h3>Experience</h3>
           <ul>
