--- a/about-cv.html
+++ b/about-cv.html
@@ -120,7 +120,7 @@
           <p>I have previously worked as a typeface (font) designer in <a href="https://www.dynacw.com/global-index.html" target="_blank">DynaComware</a> (Taiwan), creating a set of <a href="http://www.dynacw.co.jp/FileUpload/Portals/file/DynaFontSample/KinbunGothic.pdf" target="_blank">Japanese Kanji typeface</a> which consists of 12,000 characters. The set is currently available in Japan.</p>
           <p>I am a post-graduate in Master of Arts (Graphic Design) from <a href="https://akvstjoost.nl/" target="_blank">AKV St. Joost</a>, The Netherlands. In June 2017, I graduated from my masters studies with the topic: Possibilities of Mapping a Forest — Invisible Connections Between Urban Societies and Forests. My research focused on <strong>storytelling</strong> and <strong>information design</strong>; the graduation project, <a href="whats_happening_in_the_mastbos.html">What’s Happening in the Mastbos</a>, is an illustrated event map, showing the actual events that have happened in the forest. The project was exhibited during the Naar Buiten Fair, organised by <a href="https://www.staatsbosbeheer.nl/" target="_blank">Staatsbosbeheer</a> (Dutch Forestry Commission).</p>
           <p>In the year 2017 and 2018, I worked as a freelance graphic designer, illustrator in the Netherlands, working in collaboration with Dutch Forestry Commission (Staatsbosbeheer), <a href="http://www.bredaphoto.nl/" target="_blank">BredaPhoto Festival</a> as well as local artists.</p>
-          <p>Currently, I am busy experimenting, adding the third dimension to my works.</p>
+          <p>Currently, I am busy exploring, adding the third dimension to my works.</p>
         </div>
 
         <div class="cv">
